# show-achiever

./: .gitignore  OLD.README.md  README.md  backend.Dockerfile  frontend.Dockerfile  pyproject.toml
.devcontainer/: Dockerfile  default.conf  devcontainer.json  docker-compose.yml  nginx.conf  nginx.docker-compose.yml
.devcontainer/backend/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/frontend/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
frontend/: next.config.ts  package-lock.json  package.json
show_achiever/: celery_app.py  celeryconfig.py  main.py  manage.py
show_achiever/achiever_app/: apps.py
show_achiever/achiever_app/admin/: __init__.py  base.py  demo.py  user.py
show_achiever/achiever_app/endpoints/: __init__.py  redirect.py  router.py
show_achiever/achiever_app/migrations/: 0001_initial.py  0002_eventadmin_events.py  0003_attendee_following_event_alter_attendee_telegram_id.py  0004_alter_attendee_options_alter_attendeewallet_options_and_more.py
show_achiever/achiever_app/models/: __init__.py  base.py  demo.py
show_achiever/achiever_app/operations/: __init__.py
show_achiever/achiever_app/schemas/: __init__.py  attendee.py  demo.py  healthz.py
show_achiever/mysite/: asgi.py  config.py  logs.py  middleware.py  urls.py  wsgi.py
show_achiever/mysite/errors/: __init__.py  base.py  database_errors.py  handlers.py  http_errors.py  responses.py
show_achiever/mysite/settings/: __init__.py  base.py  local.py  prod.py
show_achiever/tasks/: __init__.py
show_achiever/telegram_bot_app/: apps.py
(+64 files in other folders)
